# bluerov2

./: .gitmodules  GETTING_STARTED.md  README.md  SIMULATION_TUTORIAL.md  SummersCool_1.MD  TODO.md  TUTORIAL-08.md  TUTORIAL.md  convenient_install.sh  convenient_installer.sh  convenient_installer_docker.sh  ros_commands.MD
bluerov2_ardusub/: CMakeLists.txt  package.xml  setup.py
bluerov2_bringup/: CMakeLists.txt  package.xml
bluerov2_control/: CMakeLists.txt  package.xml  setup.py
bluerov2_control/action/: FollowWaypoints.action
bluerov2_control/cfg/: pid_reconfig.cfg
bluerov2_control/config/: apm_config.yaml  apm_pluginlists.yaml  switch_command_mappings.yaml  switch_mappings.yaml
bluerov2_control/config/controllers/cascade/: simple_los.yaml
bluerov2_control/config/teleop/: f710_mappings.yaml  switch_command_mappings.yaml
bluerov2_control/config/thrusters/: calculate_polynomial_thrust.py
bluerov2_control/launch/: controller_4dof.launch  keyboard_teleop.launch  rov_pid_controller.launch  start_ardusub_sitl.launch  start_pid_controller.launch  switch_pro_teleop.launch  teleop.launch  test_controller.launch
bluerov2_control/msg/: Autopilot.msg  ControlMode.msg  Waypoint.msg  WaypointSet.msg
bluerov2_control/nodes/: controller_4dof  keyboard_joy  mavros_interface
bluerov2_control/params/: TAM.yaml
bluerov2_control/params/teleop/: f310_mappings.yaml  keyboard_mappings.yaml  switchpro_mappings.yaml
bluerov2_control/params/thrusters/: t200_thrust2gain_map.yaml
bluerov2_control/rviz/: bluerov2_control.rviz
bluerov2_control/scripts/: import_iver_mis.py  keyboard_joy.py  mavros_interface.py  simple_los.py  sitl_model_state_publisher.py  sitl_teleop_manual_control.py
bluerov2_control/src/bluerov2_control/: pid.py
bluerov2_control/src/bluerov2_control/controllers/: cascade_pid.py  pid.py
bluerov2_control/tests/: test_convert_points.py
bluerov2_description/: CMakeLists.txt
bluerov2_executive/: CMakeLists.txt  package.xml  setup.py
bluerov2_guidance/: CMakeLists.txt  package.xml  setup.py
bluerov2_hmi/: CMakeLists.txt  package.xml  plugin.xml  setup.py
bluerov2_msgs/: CMakeLists.txt  package.xml
bluerov2_navigation/: CMakeLists.txt  package.xml  setup.py
bluerov2_neptus/: CMakeLists.txt  package.xml
bluerov2_state_estimation/: CMakeLists.txt  package.xml
doc/: TUTORIAL-01.md
documentation/: SummersCool_1.MD  TUTORIAL-01.md  TUTORIAL-02.md  TUTORIAL-04.md  (+1 more)
(+145 files in other folders)
