<?xml version="1.0"?>
<package format="2">
  <name>bluerov2_control</name>
  <version>0.0.0</version>
  <description>The bluerov2_control package</description>

  <maintainer email="fletho@aqua.dtu.dk">FFT</maintainer>
  <author email="fletho@aqua.dtu.dk">FFT</author>

  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>bluerov2_msgs</exec_depend>
  <exec_depend>bluerov2_ardusub</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>mavros</exec_depend>
  <exec_depend>mavros_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-scipy</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>

</package>
